--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,18 @@
-# fly.toml app configuration file generated for 9hits-project-2-ikl8dw on 2025-10-23T15:20:21Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = '9hits-project-2-ikl8dw'
-primary_region = 'iad'
+app = "app"
+primary_region = "fra"
 
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 1024
+[[http_service.checks]]
+  grace_period = "1s"
+  interval = "15s"
+  method = "GET"
+  path = "/"
+  timeout = "2s"
