--- a/fly.toml
+++ b/fly.toml
@@ -1,18 +1,23 @@
-app = "app"
-primary_region = "fra"
+# fly.toml app configuration file generated for 9hits-project-2-aoc-3w on 2025-10-24T08:25:31Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = '9hits-project-2-aoc-3w'
+primary_region = 'fra'
 
 [build]
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+  processes = ['app']
 
-[[http_service.checks]]
-  grace_period = "1s"
-  interval = "15s"
-  method = "GET"
-  path = "/"
-  timeout = "2s"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
