--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for 9hits-project-2-aoc-3w on 2025-10-24T08:25:31Z
+# fly.toml app configuration file generated for 9hits-project-2-kizpnw on 2025-10-24T11:04:28Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = '9hits-project-2-aoc-3w'
+app = '9hits-project-2-kizpnw'
 primary_region = 'fra'
 
 [build]
